// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyForm for creation renders OK 1`] = `
<form
  className="Form"
  onSubmit={[Function]}
>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      defaultValue=""
      name="question-0"
      type="text"
    />
  </div>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      defaultValue=""
      name="question-1"
      type="text"
    />
  </div>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      defaultValue=""
      name="question-2"
      type="text"
    />
  </div>
  <button
    className="Button NextButton"
    type="submit"
  >
    Tovább
  </button>
</form>
`;

exports[`SurveyForm for update renders OK 1`] = `
<form
  className="Form"
  onSubmit={[Function]}
>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      name="answer-0"
      type="text"
    />
  </div>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      name="answer-1"
      type="text"
    />
  </div>
  <div
    className="InputGroup"
  >
    <input
      className="Input"
      name="answer-2"
      type="text"
    />
  </div>
  <button
    className="Button NextButton"
    type="submit"
  >
    Tovább
  </button>
</form>
`;
